--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,198 +1,196 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-		 id="WebApp_ID" version="2.5">
-	<display-name>HelloWorld</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<description></description>
-		<display-name>LoginServlet</display-name>
-		<servlet-name>LoginServlet</servlet-name>
-		<servlet-class>crm.irfan.LoginServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LoginServlet</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>LogoutServlet</display-name>
-		<servlet-name>LogoutServlet</servlet-name>
-		<servlet-class>crm.irfan.LogoutServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LogoutServlet</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>CalisanServlet</display-name>
-		<servlet-name>CalisanServlet</servlet-name>
-		<servlet-class>crm.irfan.CalisanServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>CalisanServlet</servlet-name>
-		<url-pattern>/calisan</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>AjaxUtils</display-name>
-		<servlet-name>AjaxUtils</servlet-name>
-		<servlet-class>crm.irfan.AjaxUtils</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AjaxUtils</servlet-name>
-		<url-pattern>/ajaxutils</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<display-name>HammaddeServlet</display-name>
-		<servlet-name>HammaddeServlet</servlet-name>
-		<servlet-class>crm.irfan.HammaddeServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>HammaddeServlet</servlet-name>
-		<url-pattern>/hammadde</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<display-name>MamulServlet</display-name>
-		<servlet-name>MamulServlet</servlet-name>
-		<servlet-class>crm.irfan.MamulServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MamulServlet</servlet-name>
-		<url-pattern>/mamul</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>YariMamulServlet</display-name>
-		<servlet-name>YariMamulServlet</servlet-name>
-		<servlet-class>crm.irfan.YariMamulServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>YariMamulServlet</servlet-name>
-		<url-pattern>/yarimamul</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>FirmaServlet</display-name>
-		<servlet-name>FirmaServlet</servlet-name>
-		<servlet-class>crm.irfan.FirmaServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>FirmaServlet</servlet-name>
-		<url-pattern>/firma</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>DepoServlet</display-name>
-		<servlet-name>DepoServlet</servlet-name>
-		<servlet-class>crm.irfan.DepoServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>DepoServlet</servlet-name>
-		<url-pattern>/depo</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>MakinaServlet</display-name>
-		<servlet-name>MakinaServlet</servlet-name>
-		<servlet-class>crm.irfan.MakinaServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MakinaServlet</servlet-name>
-		<url-pattern>/makina</url-pattern>
-	</servlet-mapping>	
-	<servlet>
-		<description></description>
-		<display-name>MamulStokServlet</display-name>
-		<servlet-name>MamulStokServlet</servlet-name>
-		<servlet-class>crm.irfan.MamulStokServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MamulStokServlet</servlet-name>
-		<url-pattern>/mamulstok</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>HammaddeStokServlet</display-name>
-		<servlet-name>HammaddeStokServlet</servlet-name>
-		<servlet-class>crm.irfan.HammaddeStokServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>HammaddeStokServlet</servlet-name>
-		<url-pattern>/hammaddestok</url-pattern>
-	</servlet-mapping>	
-	<servlet>
-		<description></description>
-		<display-name>YariMamulStokServlet</display-name>
-		<servlet-name>YariMamulStokServlet</servlet-name>
-		<servlet-class>crm.irfan.YariMamulStokServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>YariMamulStokServlet</servlet-name>
-		<url-pattern>/yarimamulstok</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>SiparisServlet</display-name>
-		<servlet-name>SiparisServlet</servlet-name>
-		<servlet-class>crm.irfan.SiparisServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SiparisServlet</servlet-name>
-		<url-pattern>/siparis</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>BekleyenSiparisServlet</display-name>
-		<servlet-name>BekleyenSiparisServlet</servlet-name>
-		<servlet-class>crm.irfan.BekleyenSiparisServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>BekleyenSiparisServlet</servlet-name>
-		<url-pattern>/bekleyensiparis</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>TamamlananSiparisServlet</display-name>
-		<servlet-name>TamamlananSiparisServlet</servlet-name>
-		<servlet-class>crm.irfan.TamamlananSiparisServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>TamamlananSiparisServlet</servlet-name>
-		<url-pattern>/tamamlanansiparis</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>UretimPlanServlet</display-name>
-		<servlet-name>UretimPlanServlet</servlet-name>
-		<servlet-class>crm.irfan.UretimPlanServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>UretimPlanServlet</servlet-name>
-		<url-pattern>/uretimplan</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>UretimTakipServlet</display-name>
-		<servlet-name>UretimTakipServlet</servlet-name>
-		<servlet-class>crm.irfan.UretimTakipServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>UretimTakipServlet</servlet-name>
-		<url-pattern>/uretimtakip</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>IrsaliyeServlet</display-name>
-		<servlet-name>IrsaliyeServlet</servlet-name>
-		<servlet-class>crm.irfan.IrsaliyeServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>IrsaliyeServlet</servlet-name>
-		<url-pattern>/irsaliye</url-pattern>
-	</servlet-mapping> 
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>irfanpls</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>LoginServlet</display-name>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>crm.irfan.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LogoutServlet</display-name>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>crm.irfan.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CalisanServlet</display-name>
+    <servlet-name>CalisanServlet</servlet-name>
+    <servlet-class>crm.irfan.CalisanServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CalisanServlet</servlet-name>
+    <url-pattern>/calisan</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AjaxUtils</display-name>
+    <servlet-name>AjaxUtils</servlet-name>
+    <servlet-class>crm.irfan.AjaxUtils</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AjaxUtils</servlet-name>
+    <url-pattern>/ajaxutils</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <display-name>HammaddeServlet</display-name>
+    <servlet-name>HammaddeServlet</servlet-name>
+    <servlet-class>crm.irfan.HammaddeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HammaddeServlet</servlet-name>
+    <url-pattern>/hammadde</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <display-name>MamulServlet</display-name>
+    <servlet-name>MamulServlet</servlet-name>
+    <servlet-class>crm.irfan.MamulServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MamulServlet</servlet-name>
+    <url-pattern>/mamul</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>YariMamulServlet</display-name>
+    <servlet-name>YariMamulServlet</servlet-name>
+    <servlet-class>crm.irfan.YariMamulServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>YariMamulServlet</servlet-name>
+    <url-pattern>/yarimamul</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FirmaServlet</display-name>
+    <servlet-name>FirmaServlet</servlet-name>
+    <servlet-class>crm.irfan.FirmaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FirmaServlet</servlet-name>
+    <url-pattern>/firma</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DepoServlet</display-name>
+    <servlet-name>DepoServlet</servlet-name>
+    <servlet-class>crm.irfan.DepoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DepoServlet</servlet-name>
+    <url-pattern>/depo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MakinaServlet</display-name>
+    <servlet-name>MakinaServlet</servlet-name>
+    <servlet-class>crm.irfan.MakinaServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MakinaServlet</servlet-name>
+    <url-pattern>/makina</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MamulStokServlet</display-name>
+    <servlet-name>MamulStokServlet</servlet-name>
+    <servlet-class>crm.irfan.MamulStokServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MamulStokServlet</servlet-name>
+    <url-pattern>/mamulstok</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>HammaddeStokServlet</display-name>
+    <servlet-name>HammaddeStokServlet</servlet-name>
+    <servlet-class>crm.irfan.HammaddeStokServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HammaddeStokServlet</servlet-name>
+    <url-pattern>/hammaddestok</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>YariMamulStokServlet</display-name>
+    <servlet-name>YariMamulStokServlet</servlet-name>
+    <servlet-class>crm.irfan.YariMamulStokServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>YariMamulStokServlet</servlet-name>
+    <url-pattern>/yarimamulstok</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SiparisServlet</display-name>
+    <servlet-name>SiparisServlet</servlet-name>
+    <servlet-class>crm.irfan.SiparisServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SiparisServlet</servlet-name>
+    <url-pattern>/siparis</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>BekleyenSiparisServlet</display-name>
+    <servlet-name>BekleyenSiparisServlet</servlet-name>
+    <servlet-class>crm.irfan.BekleyenSiparisServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BekleyenSiparisServlet</servlet-name>
+    <url-pattern>/bekleyensiparis</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>TamamlananSiparisServlet</display-name>
+    <servlet-name>TamamlananSiparisServlet</servlet-name>
+    <servlet-class>crm.irfan.TamamlananSiparisServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TamamlananSiparisServlet</servlet-name>
+    <url-pattern>/tamamlanansiparis</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UretimPlanServlet</display-name>
+    <servlet-name>UretimPlanServlet</servlet-name>
+    <servlet-class>crm.irfan.UretimPlanServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UretimPlanServlet</servlet-name>
+    <url-pattern>/uretimplan</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UretimTakipServlet</display-name>
+    <servlet-name>UretimTakipServlet</servlet-name>
+    <servlet-class>crm.irfan.UretimTakipServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UretimTakipServlet</servlet-name>
+    <url-pattern>/uretimtakip</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>IrsaliyeServlet</display-name>
+    <servlet-name>IrsaliyeServlet</servlet-name>
+    <servlet-class>crm.irfan.IrsaliyeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IrsaliyeServlet</servlet-name>
+    <url-pattern>/irsaliye</url-pattern>
+  </servlet-mapping>
 </web-app>
