--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,4 +11,9 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  <listener>
+    <listener-class>
+        crm.irfan.ServletContextExample
+    </listener-class>
+  </listener>
 </web-app>
